tests/paczka1/fuzzy1/98508322.err
Error in line 6: TXCVzyz A791 26,7
Error in line 1: bhfYR A791 31,2
Error in line 7: cDMedQc A501 25,8
Error in line 13: il0BQzihz A501 71,3
Error in line 21: cDMedQc S911 6,1
Error in line 22: il0BQzihz A791 82,5
